# hw_adv

hw1/: hw1_2.py  hw1_3.py  hw1_4.py  hw1_5.py  hw1_6.py  hw1_7.py
hw2/: hw2_6_requests.py  hw2_6_urllib.py  hw2_8.py
hw3/: hw3_1.py  hw3_2.py  hw3_3.py  hw3_7.py
hw4/: hw4.py
hw5/: hw5_1_concurrent_futures.py  hw5_1_threading.py  hw5_2.py
hw6/: hw6_1_aiohttp.py  hw6_1_requests.py
hw7/: hw7_1.py  hw7_2.py  hw7_3(unfinished).py
hw8/test_poetry/: pyproject.toml
hw9/: hw9_1.py  hw9_2.py  hw9_3.py
