[project]
name = "test-poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "ThinBug",email = "mick.borysenko@gmail.com"}
]
readme = "README.md"
requires-python = "3.9"
dependencies = [
    "django (==3.1)",
    "bs4 (>=0.0.2,<0.0.3)",
    "pillow (==8.3.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
